# openrelik-worker-yara-scan

./: Dockerfile  README.md  docker-compose-snippet.yml  pyproject.toml
.github/workflows/: docker-push.yml
src/: tasks.py
src/providers/: interface.py  yeti.py
