[tool.poetry]
name = "openrelik-worker-yara-scan"
version = "2025.02.04"
description = "Scan a local directory using Yara"
authors = ["Thomas Chopitea <tomchop@gmial.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"
yeti = {git = "https://github.com/yeti-platform/yeti-python.git"}
yara-python = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
